unix/lang/tests/error/switch_goto_error.yab
#---Error in ./tests/error/switch_goto_error.yab, line 8: GOTO between switch-statements

switch 0
  case 0: goto other
end switch

switch 0
  case 0: label other
end switch

